add login for admin page

--- a/views/admin/blog.ejs
+++ b/views/admin/blog.ejs
@@ -21,7 +21,7 @@
                         <!-- begin post -->
                         <div class="card">
                             <a href="post.html">
-                                <img class="img-fluid" src="img/demopic/5.jpg" alt="">
+                                <img class="img-fluid" src="/img/demopic/5.jpg" alt="">
                             </a>
                             <div class="card-block">
                                 <h2 class="card-title"><a href="post.html">Autumn doesn't have to be nostalgic, you know?</a></h2>
