--- a/views/blog/post.ejs
+++ b/views/blog/post.ejs
@@ -34,7 +34,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            <div class="sep">
+                            <!-- <div class="sep">
                             </div>
                             <p>
                                 Talk
@@ -46,7 +46,7 @@
                         <svg class="svgIcon-use" width="29" height="29" viewbox="0 0 29 29"><path d="M21.27 20.058c1.89-1.826 2.754-4.17 2.754-6.674C24.024 8.21 19.67 4 14.1 4 8.53 4 4 8.21 4 13.384c0 5.175 4.53 9.385 10.1 9.385 1.007 0 2-.14 2.95-.41.285.25.592.49.918.7 1.306.87 2.716 1.31 4.19 1.31.276-.01.494-.14.6-.36a.625.625 0 0 0-.052-.65c-.61-.84-1.042-1.71-1.282-2.58a5.417 5.417 0 0 1-.154-.75zm-3.85 1.324l-.083-.28-.388.12a9.72 9.72 0 0 1-2.85.424c-4.96 0-8.99-3.706-8.99-8.262 0-4.556 4.03-8.263 8.99-8.263 4.95 0 8.77 3.71 8.77 8.27 0 2.25-.75 4.35-2.5 5.92l-.24.21v.32c0 .07 0 .19.02.37.03.29.1.6.19.92.19.7.49 1.4.89 2.08-.93-.14-1.83-.49-2.67-1.06-.34-.22-.88-.48-1.16-.74z"></path></svg>
                         </a>
                                 </li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                     <!-- End Fixed Left Share -->
@@ -57,55 +57,50 @@
 
                             <!-- Begin Top Meta -->
                             <div class="row post-top-meta">
-                                <div class="col-md-2">
+                                <!-- <div class="col-md-2">
                                     <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/e56154546cf4be74e393c62d1ae9f9d4?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
-                                </div>
+                                </div> -->
                                 <div class="col-md-10">
-                                    <a class="link-dark" href="author.html">Sal</a><a href="#" class="btn follow">Follow</a>
-                                    <span class="author-description">Founder of WowThemes.net and creator of <b>"Mediumish"</b> theme that you're currently previewing. Developing professional premium themes, templates, plugins, scripts since 2012.</span>
-                                    <span class="post-date">22 July 2017</span><span class="dot"></span><span class="post-read">6 min read</span>
+                                    <!-- <a class="link-dark" href="author.html">Sal</a><a href="#" class="btn follow">Follow</a>
+                                    <span class="author-description">Founder of WowThemes.net and creator of <b>"Mediumish"</b> theme that you're currently previewing. Developing professional premium themes, templates, plugins, scripts since 2012.</span> -->
+                                    <span class="post-date">
+                                        <% var date = blog.createdAt %> 
+                                        <% var myDate = new Date(date)%>
+                                        <% var month = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'June', 'July', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'] %>
+                                        <%- myDate.getDate() + ' ' + month[(myDate.getMonth() + 1)] + ' ' + myDate.getFullYear() %> 
+                                    </span>
+                                    <!-- <span class="dot"></span> -->
+                                    <!-- <span class="post-read">6 min read</span> -->
                                 </div>
                             </div>
                             <!-- End Top Menta -->
 
-                            <h1 class="posttitle">18 Things You Should Learn Before Moving Into a New Home</h1>
+                            <h1 class="posttitle">
+                                <%= blog.title %>
+                            </h1>
 
                         </div>
 
                         <!-- Begin Featured Image -->
-                        <img class="featured-image img-fluid" src="/img/demopic/10.jpg" alt="">
+                        <img class="featured-image img-fluid" src="<%= blog.imageURL %>" alt="">
                         <!-- End Featured Image -->
 
                         <!-- Begin Post Content -->
                         <div class="article-post">
-                            <p>
-                                Holy grail funding non-disclosure agreement advisor ramen bootstrapping ecosystem. Beta crowdfunding iteration business plan paradigm shift stealth mass market seed money rockstar niche market marketing buzz market.
-                            </p>
-                            <p>
-                                Burn rate release facebook termsheet equity technology. Interaction design rockstar network effects handshake creative startup direct mailing. Technology influencer direct mailing deployment return on investment seed round.
-                            </p>
-                            <p>
-                                Termsheet business model canvas user experience churn rate low hanging fruit backing iteration buyer seed money. Virality release launch party channels validation learning curve paradigm shift hypotheses conversion. Stealth leverage freemium venture startup
-                                business-to-business accelerator market.
-                            </p>
-                            <blockquote>
-                                Gen-z strategy long tail churn rate seed money channels user experience incubator startup partner network low hanging fruit direct mailing. Client backing success startup responsive web design burn rate A/B testing metrics first mover advantage conversion.
-                            </blockquote>
-                            <p>
-                                Freemium non-disclosure agreement lean startup bootstrapping holy grail ramen MVP iteration accelerator. Strategy market ramen leverage paradigm shift seed round entrepreneur crowdfunding social proof angel investor partner network virality.
-                            </p>
+                            <% var article = blog.article%>
+                                <%- article %>
                         </div>
                         <!-- End Post Content -->
 
                         <!-- Begin Tags -->
-                        <div class="after-post-tags">
+                        <!-- <div class="after-post-tags">
                             <ul class="tags">
                                 <li><a href="#">Design</a></li>
                                 <li><a href="#">Growth Mindset</a></li>
                                 <li><a href="#">Productivity</a></li>
                                 <li><a href="#">Personal Growth</a></li>
                             </ul>
-                        </div>
+                        </div> -->
                         <!-- End Tags -->
 
                     </div>
@@ -123,81 +118,50 @@
             <div class="graybg">
                 <div class="container">
                     <div class="row listrecent listrelated">
-
                         <!-- begin post -->
-                        <div class="col-md-4">
-                            <div class="card">
-                                <a href="post.html">
-                                    <img class="img-fluid img-thumb" src="/img/demopic/9.jpg" alt="">
+                        <% for (let blog of blogs) {%>
+                            <div class="col-md-4">
+                                <div class="card">
+                                    <a href="/post/<%= blog.id %>  ">
+                                    <img class="img-fluid img-thumb" src="<%= blog.imageURL %>" alt="">
                                 </a>
-                                <div class="card-block">
-                                    <h2 class="card-title"><a href="post.html">Best recreational places to visit on a holiday</a></h2>
-                                    <div class="metafooter">
-                                        <div class="wrapfooter">
-                                            <span class="meta-footer-thumb">
+                                    <div class="card-block">
+                                        <h2 class="card-title">
+                                            <a href="/post/<%= blog.id %>  ">
+                                                <%= blog.title %>
+                                            </a>
+                                        </h2>
+                                        <div class="card-text">
+                                            <% var article = blog.article%>
+                                                <%- article %>
+                                        </div>
+                                        <div class="metafooter">
+                                            <div class="wrapfooter">
+                                                <span class="meta-footer-thumb">
                                     <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/e56154546cf4be74e393c62d1ae9f9d4?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
                                     </span>
-                                            <span class="author-meta">
+                                                <span class="author-meta">
                                     <span class="post-name"><a href="author.html">Sal</a></span><br/>
-                                            <span class="post-date">22 July 2017</span><span class="dot"></span><span class="post-read">6 min read</span>
-                                            </span>
-                                            <span class="post-read-more"><a href="post.html" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                                                <span class="post-date">
+                                                    <% var date = blog.createdAt %> 
+                                                    <% var myDate = new Date(date)%>
+                                                    <% var month = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'June', 'July', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'] %>
+                                                    <%- myDate.getDate() + ' ' + month[(myDate.getMonth())] + ' ' + myDate.getFullYear() %> 
+                                                </span>
+                                                </span>
+                                                <!-- <span class="dot"></span> -->
+                                                <!-- <span class="post-read">6 min read</span> -->
+                                                </span>
+                                                <span class="post-read-more"><a href="/post/<%= blog.id %>  " title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!-- end post -->
+                            <% } %>
+                                <!-- end post -->
 
-                        <!-- begin post -->
-                        <div class="col-md-4">
-                            <div class="card">
-                                <a href="post.html">
-                                    <img class="img-fluid img-thumb" src="/img/demopic/8.jpg" alt="">
-                                </a>
-                                <div class="card-block">
-                                    <h2 class="card-title"><a href="post.html">How travelling can change your life</a></h2>
-                                    <div class="metafooter">
-                                        <div class="wrapfooter">
-                                            <span class="meta-footer-thumb">
-                                    <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/e56154546cf4be74e393c62d1ae9f9d4?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
-                                    </span>
-                                            <span class="author-meta">
-                                    <span class="post-name"><a href="author.html">Sal</a></span><br/>
-                                            <span class="post-date">22 July 2017</span><span class="dot"></span><span class="post-read">6 min read</span>
-                                            </span>
-                                            <span class="post-read-more"><a href="post.html" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end post -->
 
-                        <!-- begin post -->
-                        <div class="col-md-4">
-                            <div class="card">
-                                <a href="post.html">
-                                    <img class="img-fluid img-thumb" src="/img/demopic/7.jpg" alt="">
-                                </a>
-                                <div class="card-block">
-                                    <h2 class="card-title"><a href="post.html">Little red dress and a perfect summer</a></h2>
-                                    <div class="metafooter">
-                                        <div class="wrapfooter">
-                                            <span class="meta-footer-thumb">
-                                    <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/e56154546cf4be74e393c62d1ae9f9d4?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
-                                    </span>
-                                            <span class="author-meta">
-                                    <span class="post-name"><a href="author.html">Sal</a></span><br/>
-                                            <span class="post-date">22 July 2017</span><span class="dot"></span><span class="post-read">6 min read</span>
-                                            </span>
-                                            <span class="post-read-more"><a href="post.html" title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- end post -->
 
                     </div>
                 </div>
@@ -208,11 +172,11 @@
 
             <!-- Begin AlertBar
     ================================================== -->
-            <div class="alertbar">
+            <!-- <div class="alertbar">
                 <div class="container text-center">
                     <img src="/img/logo.png" alt=""> &nbsp; Never miss a <b>story</b> from us, get weekly updates in your inbox. <a href="#" class="btn subscribe">Get Updates</a>
                 </div>
-            </div>
+            </div> -->
             <!-- End AlertBar
     ================================================== -->
 
