--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Login V18</title>
+    <title>
+        <%= pageTitle %>
+    </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
