--- a/views/admin/newPost.ejs
+++ b/views/admin/newPost.ejs
@@ -19,18 +19,18 @@
                 <!-- Begin Post -->
                 <div class="col-md-8 col-md-offset-2 col-xs-12">
                     <main>
-                        <form class="product-form" method="POST">
+                        <form class="product-form" method="POST" action="/admin/post_blog">
                             <div class="form-control">
                                 <label for="title">Title</label>
-                                <input type="text" name="title" id="title">
+                                <input type="text" name="title">
                             </div>
                             <div class="form-control">
-                                <label for="imageUrl">Image URL</label>
-                                <input type="text" name="imageUrl" id="imageUrl">
+                                <label for="imageURL">Image URL</label>
+                                <input type="text" name="imageURL">
                             </div>
                             <div class="form-control">
-                                <label for="blogpost">Blog Post</label>
-                                <textarea id="my-expressjs-tinymce-app" rows='40'></textarea>
+                                <label for="article">Blog Post</label>
+                                <textarea id="my-expressjs-tinymce-app" rows='40' name="article"></textarea>
                             </div>
 
                             <button class="btn" type="submit">Post</button>
