--- a/views/includes/hero.ejs
+++ b/views/includes/hero.ejs
@@ -2,10 +2,10 @@
 ================================================== -->
 <div class="container">
     <div class="mainheading">
-        <h1 class="sitetitle">KachiCode</h1>
-        <p class="lead">
+        <h1 class="sitetitle">Kachi Blog</h1>
+        <!-- <p class="lead">
             A tech blog on MERN Stack.
-        </p>
+        </p> -->
     </div>
     <!-- End Site Title
 ================================================== -->
