--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -19,12 +19,12 @@
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/post">Post</a>
                 </li> -->
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="/author">Author</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/admin">Admin</a>
-                </li>
+                </li> -->
             </ul>
             <!-- End Menu -->
             <!-- Begin Search -->
