Intial blog set up and CRUD operations on MongoDB

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -13,49 +13,53 @@
                     <div class="section-title">
                         <h2><span>All Blog Posts</span></h2>
                     </div>
-                    <div class="card-columns listrecent">
-
-                        <!-- begin post -->
-                        <% for (let blog of blogs) {%>
-                            <div class="card">
-                                <a href="/post/<%= blog.id %>  ">
-                                <img class="img-fluid" src="<%= blog.imageURL %>" alt="">
-                            </a>
-                                <div class="card-block">
-                                    <h2 class="card-title">
+                    <% if(blogs.length === 0) {%>
+                        <h1>No blog article available</h1>
+                        <% } else { %>
+                            <!-- begin post -->
+                            <div class="card-columns listrecent">
+                                <% for (let blog of blogs) {%>
+                                    <div class="card">
                                         <a href="/post/<%= blog.id %>  ">
-                                            <%= blog.title %>
-                                        </a>
-                                    </h2>
-                                    <div class="card-text">
-                                        <% var article = blog.article%>
-                                            <%- article %>
-                                    </div>
-                                    <div class="metafooter">
-                                        <div class="wrapfooter">
-                                            <span class="meta-footer-thumb">
-						<a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/21cdec2c930fa9a0fcef21ed6ca8cc88?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
-						</span>
-                                            <span class="author-meta">
-						<span class="post-name"><a href="author.html"><%= blog.user.first_name %> </a></span><br/>
-                                            <span class="post-date">
-                                                <% var date = blog.createdAt %> 
-                                                <% var myDate = new Date(date)%>
-                                                <% var month = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'June', 'July', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'] %>
-                                                <%- myDate.getDate() + ' ' + month[(myDate.getMonth())] + ' ' + myDate.getFullYear() %> 
-                                            </span>
-                                            <!-- <span class="dot"></span><span class="post-read">6 min read</span> -->
-                                            </span>
-                                            <span class="post-read-more"><a href="/post/<%= blog.id %>  " title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                                        <img class="img-fluid" src="<%= blog.imageURL %>" alt="">
+                                    </a>
+                                        <div class="card-block">
+                                            <h2 class="card-title">
+                                                <a href="/post/<%= blog.id %>  ">
+                                                    <%= blog.title %>
+                                                </a>
+                                            </h2>
+                                            <div class="card-text">
+                                                <% var article = blog.article%>
+                                                    <%- article %>
+                                            </div>
+                                            <div class="metafooter">
+                                                <div class="wrapfooter">
+                                                    <span class="meta-footer-thumb">
+                                <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/21cdec2c930fa9a0fcef21ed6ca8cc88?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
+                                </span>
+                                                    <span class="author-meta">
+                                <span class="post-name"><a href="author.html"><%= blog.userId.name %> </a></span><br/>
+                                                    <!-- <span class="post-name"><a href="author.html"> Sally </a></span><br/> -->
+                                                    <span class="post-date">
+                                                        <% var date = blog.createdAt %> 
+                                                        <% var myDate = new Date(date)%>
+                                                        <% var month = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'June', 'July', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'] %>
+                                                        <%- myDate.getDate() + ' ' + month[(myDate.getMonth())] + ' ' + myDate.getFullYear() %> 
+                                                    </span>
+                                                    <!-- <span class="dot"></span><span class="post-read">6 min read</span> -->
+                                                    </span>
+                                                    <span class="post-read-more"><a href="/post/<%= blog.id %>  " title="Read Story"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M19 6c0-1.1-.9-2-2-2H8c-1.1 0-2 .9-2 2v14.66h.012c.01.103.045.204.12.285a.5.5 0 0 0 .706.03L12.5 16.85l5.662 4.126a.508.508 0 0 0 .708-.03.5.5 0 0 0 .118-.285H19V6zm-6.838 9.97L7 19.636V6c0-.55.45-1 1-1h9c.55 0 1 .45 1 1v13.637l-5.162-3.668a.49.49 0 0 0-.676 0z" fill-rule="evenodd"></path></svg></a></span>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
+                                    <!-- end post -->
+                                    <% } %>
+                                        <% } %>
+
+
                             </div>
-                            <!-- end post -->
-                            <% } %>
-
-
-                    </div>
                 </section>
                 <!-- End List Posts
 	================================================== -->
