fix overlaping text in cards

--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -21,7 +21,7 @@
                                 <% for (let blog of blogs) {%>
                                     <div class="card">
                                         <a href="/post/<%= blog.id %>  ">
-                                        <img class="img-fluid" style="height: 50%;" src="<%= blog.imageURL %>" alt="">
+                                        <img class="img-fluid"  src="<%= blog.imageURL %>" alt="">
                                         </a>
                                         <div class="card-block">
                                             <h2 class="card-title">
