--- a/views/blog/index.ejs
+++ b/views/blog/index.ejs
@@ -21,7 +21,7 @@
                                 <% for (let blog of blogs) {%>
                                     <div class="card">
                                         <a href="/post/<%= blog.id %>  ">
-                                        <img class="img-fluid"  src="<%= blog.imageURL %>" alt="">
+                                        <img style="height: 50%; width: 100%" src="<%= blog.imageURL %>" alt="">
                                         </a>
                                         <div class="card-block">
                                             <h2 class="card-title">
@@ -36,10 +36,10 @@
                                             <div class="metafooter">
                                                 <div class="wrapfooter">
                                                     <span class="meta-footer-thumb">
-                                <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/21cdec2c930fa9a0fcef21ed6ca8cc88?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
+                                <a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar?d=mp" alt="Sal"></a>
                                 </span>
                                                     <span class="author-meta">
-                                <span class="post-name"><a href="author.html"><%= blog.userId.name %> </a></span><br/>
+                                <span class="post-name"><a href="author.html"><%= blog.userId.username %> </a></span><br/>
                                                     <!-- <span class="post-name"><a href="author.html"> Sally </a></span><br/> -->
                                                     <span class="post-date">
                                                         <% var date = blog.createdAt %> 
