--- a/public/css/mediumish.css
+++ b/public/css/mediumish.css
@@ -114,17 +114,15 @@ section {
 }
 
 .card-text {
-    white-space: normal;
-    height: 50px;
-    overflow: hidden;
+    /* white-space: normal; */
+    height: 30%;
     text-overflow: ellipsis;
-    /* overflow: hidden;
-    height: 4.8rem;
+    overflow: hidden;
     text-overflow: ellipsis;
     display: block;
     -webkit-line-clamp: 1;
     -webkit-box-orient: horizontal;
-    white-space: normal; */
+    white-space: normal;
 }
 
 .listfeaturedtag h4.card-text,
@@ -418,6 +416,8 @@ blockquote {
 .card .img-thumb {
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
+    height: 40%;
+    overflow: hidden;
 }
 
 ul.tags {
