--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -41,53 +41,54 @@
 						Login to continue
 					</span>
 
-                    <% if(message === true){ %>
-                        <p style="color: red;">Please use test@co.co as email and password as password</p>
-                        <% } else { %>
-                            <% } %>
+                    <% if(message){ %>
+                        <p style="color: red; text-align:center">
+                            <%= message %>
+                        </p>
+                        <% } %>
 
-                                <div class="wrap-input100 validate-input" data-validate="Username is required">
-                                    <input class="input100" type="text" name="username">
-                                    <span class="focus-input100"></span>
-                                    <span class="label-input100">Username</span>
-                                </div>
+                            <div class="wrap-input100 validate-input" data-validate="Username is required">
+                                <input class="input100" type="text" name="username">
+                                <span class="focus-input100"></span>
+                                <span class="label-input100">Username</span>
+                            </div>
 
 
-                                <div class="wrap-input100 validate-input" data-validate="Password is required">
-                                    <input class="input100" type="password" name="pass">
-                                    <span class="focus-input100"></span>
-                                    <span class="label-input100">Password</span>
-                                </div>
+                            <div class="wrap-input100 validate-input" data-validate="Password is required">
+                                <input class="input100" type="password" name="password">
+                                <span class="focus-input100"></span>
+                                <span class="label-input100">Password</span>
+                            </div>
 
-                                <div class="flex-sb-m w-full p-t-3 p-b-32">
-                                    <div class="contact100-form-checkbox">
-                                        <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                                        <label class="label-checkbox100" for="ckb1">
+                            <div class="flex-sb-m w-full p-t-3 p-b-32">
+                                <div class="contact100-form-checkbox">
+                                    <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                                    <label class="label-checkbox100" for="ckb1">
 								Remember me
 							</label>
-                                    </div>
+                                </div>
 
-                                    <div>
-                                        <a href="#" class="txt1">
+                                <div>
+                                    <a href="#" class="txt1">
 								Forgot Password?
 							</a>
-                                    </div>
                                 </div>
+                            </div>
 
 
-                                <div class="container-login100-form-btn">
-                                    <button class="login100-form-btn" style="color: black; background-color: #ea9c0c">
+                            <div class="container-login100-form-btn">
+                                <button class="login100-form-btn" style="color: black; background-color: #ea9c0c">
 							Login
 						</button>
-                                </div>
+                            </div>
 
-                                <div class="text-center p-t-46 p-b-20">
-                                    <span class="txt2">
+                            <div class="text-center p-t-46 p-b-20">
+                                <span class="txt2">
                                         Don’t have an account? <a href="/register"> Sign up</a>
 						</span>
-                                </div>
+                            </div>
 
-                                <!-- <div class="login100-form-social flex-c-m">
+                            <!-- <div class="login100-form-social flex-c-m">
                                     <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
                                         <i class="fa fa-facebook-f" aria-hidden="true"></i>
                                     </a>
