--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -13,13 +13,31 @@
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <!-- Begin Menu -->
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <!-- <li class="nav-item active">
                     <a class="nav-link" href="/">Stories <span class="sr-only">(current)</span></a>
-                </li>
-                <!-- <li class="nav-item">
+                </li> -->
+                <% if (!isAuth) { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/login">Login</a>
+                    </li>
+                    <% } else { %>
+                        <li class="nav-item">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="/admin">Dashboard</a>
+                            </li>
+                            <li class="nav-item">
+                                <form class="nav-link" action="/logout" method="post">
+                                    <button type="submit" style="border: none; background-color:white; cursor:pointer">
+                                    Logout
+                                </button>
+                                </form>
+                            </li>
+                        </li>
+                        <% } %>
+                            <!-- <li class="nav-item">
                     <a class="nav-link" href="/post">Post</a>
                 </li> -->
-                <!-- <li class="nav-item">
+                            <!-- <li class="nav-item">
                     <a class="nav-link" href="/author">Author</a>
                 </li>
                 <li class="nav-item">
